fix: line spacing in the about text container

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -34,7 +34,7 @@ a{
   height: 3px;
   width: 60%;
   background-color: #655699;
-  margin: 30px 0;
+  margin: 30px 0px 50px;
 }
 
 h3 {
