--- a/src/styles/index.module.css
+++ b/src/styles/index.module.css
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 95vh;
+  height: 90vh;
   background-color: #FCFCFD;
   color: var(--text);
 }
@@ -98,8 +98,9 @@
 }
 
 .textContainer {
+  width: 50%;
   border-radius: 15px;
-  font-size: 1.2rem;
+  line-height: 30px;
 }
 
 .textContainer h2 {
